--- a/netmastery/Bulky/BulkyWeb/Areas/Admin/Views/Product/Upsert.cshtml
+++ b/netmastery/Bulky/BulkyWeb/Areas/Admin/Views/Product/Upsert.cshtml
@@ -4,22 +4,22 @@
     <div class="card-header bg-secondary bg-gradient ml-0 py-3">
         <div class="row">
             <div class="col-12 text-center">
-                <h2 class="text-white py-2">Create Product</h2>
+                <h2 class="text-white py-2">@(Model.Product.Id != 0 ? "Update" : "Create") Product</h2>
             </div>
         </div>
     </div>
     <div class="card-body p-4">
-        <form method="post" class="row">
+        <form method="post" class="row" enctype="multipart/form-data">
+            <input asp-for="Product.Id" hidden/>
             <div class="border p-3">
                 <div class="form-floating py-2 col-12">
                     <input asp-for="Product.Title" class="form-control border-0 shadow" />
                     <label asp-for="Product.Title" class="ms-2 mt-1"></label>
                     <span asp-validation-for="Product.Title" class="text-danger"></span>
                 </div>
-                <div class="form-floating py-2 mt-2 col-12">
+                <div class="py-2 mt-2 col-12">
+                    <label asp-for="Product.Description" class="ms-2 mt-1 text-muted"></label>
                     <textarea asp-for="Product.Description" class="form-control border-0 shadow"></textarea>
-                    <label asp-for="Product.Description" class="ms-2 mt-1"></label>
-                    <span asp-validation-for="Product.Description" class="text-danger"></span>
                 </div>
                 <div class="form-floating py-2 mt-2 col-12">
                     <input asp-for="Product.ISBN" class="form-control border-0 shadow" />
@@ -59,9 +59,21 @@
                     <label asp-for="Product.CategoryId" class="ms-2 mt-1"></label>
                     <span asp-validation-for="Product.CategoryId" class="text-danger"></span>
                 </div>
+                <div class="form-floating py-2 mt-2 col-12">
+                    <input type="file" class="form-control border-0 shadow" />
+                    <label asp-for="Product.ImageUrl" class="ms-2 mt-1"></label>
+                </div>
                 <div class="row pt-2">
                     <div class="col-6 col-md-3">
-                        <button type="submit" class="btn btn-primary border form-control">Create</button>
+                        @if(Model.Product.Id != 0)
+                        {
+                            <button type="submit" class="btn btn-primary border form-control">Update</button>
+                        } 
+                        else
+                        {
+                            <button type="submit" class="btn btn-primary border form-control">Create</button>
+                        }
+                        
                     </div>
                     <div class="col-6 col-md-3">
                         <a asp-controller="Product" asp-action="Index" class="btn btn-outline-primary border form-control">Back To List</a>
@@ -76,6 +88,26 @@
 
 
 @section Scripts {
+    <script>
+        tinymce.init({
+          selector: 'textarea',
+          plugins: [
+            // Core editing features
+            'anchor', 'autolink', 'charmap', 'codesample', 'emoticons', 'lists', 'table', 'visualblocks', 'wordcount',
+            // Your account includes a free trial of TinyMCE premium features
+            // Try the most popular premium features until Sep 29, 2024:
+            'checklist', 'mediaembed', 'casechange', 'export', 'formatpainter', 'pageembed', 'a11ychecker', 'tinymcespellchecker', 'permanentpen', 'powerpaste', 'advtable', 'advcode', 'editimage', 'advtemplate', 'ai', 'mentions', 'tinycomments', 'tableofcontents', 'footnotes', 'mergetags', 'autocorrect', 'typography', 'inlinecss', 'markdown',
+          ],
+          toolbar: 'undo redo | blocks fontfamily fontsize | bold italic underline strikethrough | addcomment showcomments | spellcheckdialog a11ycheck typography | align lineheight | checklist numlist bullist indent outdent',
+          tinycomments_mode: 'embedded',
+          tinycomments_author: 'Author name',
+          mergetags_list: [
+            { value: 'First.Name', title: 'First Name' },
+            { value: 'Email', title: 'Email' },
+          ],
+          ai_request: (request, respondWith) => respondWith.string(() => Promise.reject('See docs to implement AI Assistant')),
+        });
+    </script>
     @{
         <partial name="_ValidationScriptsPartial"></partial>
     }
