--- a/netmastery/Bulky/BulkyWeb/Areas/Admin/Views/Product/Index.cshtml
+++ b/netmastery/Bulky/BulkyWeb/Areas/Admin/Views/Product/Index.cshtml
@@ -46,7 +46,7 @@
                             @obj.Author
                         </td>
                         <td>
-                            
+                            @obj.Category.Name
                         </td>
                         <td>
                             <div class="w-75 btn-group" role="group">
