--- a/netmastery/Bulky/BulkyWeb/Areas/Admin/Views/Product/Index.cshtml
+++ b/netmastery/Bulky/BulkyWeb/Areas/Admin/Views/Product/Index.cshtml
@@ -18,8 +18,8 @@
                 </a>
             </div>
         </div>
-        @* <table id="tblData" class="table table-bordered table-striped" style="width:100%"> *@
-        <table class="table table-bordered table-striped" style="width:100%">
+        <table id="tblData" class="table table-bordered table-striped" style="width:100%">
+        @* <table class="table table-bordered table-striped" style="width:100%"> *@
             <thead>
                 <tr>
                     <th>Title</th>
@@ -30,7 +30,7 @@
                     <th></th>
                 </tr>
             </thead>
-            <tbody>
+            @* <tbody>
                 @foreach (var obj in Model)
                 {
                     <tr>
@@ -63,7 +63,7 @@
                     </tr>
                 }
             
-            </tbody>
+            </tbody> *@
         </table>
     </div>
 </div>
