--- a/netmastery/Bulky/BulkyWeb/Views/Shared/_Layout.cshtml
+++ b/netmastery/Bulky/BulkyWeb/Views/Shared/_Layout.cshtml
@@ -61,7 +61,7 @@
             Made with <i class="bi bi-heart-fill"></i> by Sp
         </div>
     </footer>
-    <script src="https://cdn.tiny.cloud/1/[API-KEY]/tinymce/7/tinymce.min.js" referrerpolicy="origin"></script>
+    <script src="https://cdn.tiny.cloud/1/u6c7hu48o1f4n3s5khnty4qavme61bkvtl887g6wrz7rtgzp/tinymce/7/tinymce.min.js" referrerpolicy="origin"></script>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
